--- a/assets/style.css
+++ b/assets/style.css
@@ -28,11 +28,13 @@ header {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    overflow: hidden;
+    text-align: center;
 }
 
 header h1 {
     color: var(--cornsilk);
-    margin-top: 22px;
+    margin-top: 25px;
     font-size: 45px;
 }
 
@@ -49,12 +51,20 @@ header nav ul {
 }
 
 header nav ul li a {
+    float: left;
     padding: 16px 45px;
     font-size: 1.55vw;
     color: var(--cornsilk);
     background-color: rgba(92, 67, 36, .6);
-    border-top: var(--brown-title);
-    border-bottom: var(--brown-title);
+}
+
+header ul li a:hover {
+    background-color: rgba(23, 27, 14, .6);
+    color: #FEFAE0;
+}
+
+header ul li a:active {
+    background-color: var(--dark-brown);
 }
 
 /* ABOUT ME SECTION */
@@ -72,7 +82,6 @@ header nav ul li a {
     width: 30%;
     float: left;
     margin: 22px;
-    background-color: rgba(25, 42, 13, .8);
 }
 
 .bio h3 {
@@ -195,9 +204,8 @@ header nav ul li a {
 
 .secondary-title
 {
-    font-size: 35px;
     text-align: center;
-    padding: 9px 0 0;
+    padding: 9px;
 }
 
 .contact-info ul {
@@ -211,5 +219,62 @@ header nav ul li a {
 
 .contact-info h3 a {
     color: var(--cornsilk);
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 980px) {
+    header {
+        float: right;
+        padding: 30px 0px;
+    }
+    header nav ul {
+        flex-wrap: nowrap;
+    }
+    header ul li a {
+        float: none;
+        display: block;
+        text-align: left;
+        font-size: 20px;
+    }
+    .bio {
+        margin: auto;
+    }
+    .bio h3 {
+        margin: 25px;
+        width: auto;
+    }
+    .bio img {
+        width: 75%;
+        padding: 25px;
+    }
+    .bio p {
+        padding: 50px;
+        margin: auto;
+        float: none;
+        width: auto;
+    }
+    .section-title{
+        margin: 36px 26px;
+    }
+    .sample-rb {
+        padding: 10px;
+        margin: 0;
+    }
+    .sample-rb img {
+        width: 100%;
+    }
+    .contact {
+        margin: 0 75px;
+    }
+    .contact-info ul {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+    }
+    .contact-info ul li h3 a {
+        flex-wrap: nowrap;
+    }
 }
 
